<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdl_graph_slam</name>
  <version>2.0.0</version>
  <description>ROS2 port of hdl_graph_slam - 3D Graph-based SLAM using NDT scan matching</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>eigen</build_depend>
  <build_depend>libg2o</build_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>interactive_markers</depend>
  <depend>ndt_omp</depend>
  <depend>fast_gicp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
